--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-expand-lg bg-warning ">
     <div class="container-fluid">
       <%= link_to root_path, class: 'navbar-brand' do %>
-        <%= image_tag '#' %>
+        <%= image_tag('bread_sample.jpg', class: 'img-fluid', alt: 'Bread Sample') %>
       <% end %>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
