--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -10,7 +10,7 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <%= link_to "ログイン" "#", class: 'nav-link' do %>
+            <%= link_to "ログイン", root_path, class: 'nav-link' do %>
               <i class="fa-solid fa-right-to-bracket fa-xl custom-icon flex-shrink-0 group-hover:text-mitsuboshi-blue"></i>
               <span class="icon-texte"><%= "ログイン" %></span>
             <% end %>
