--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -12,7 +12,8 @@
       <ul class='navbar-nav ms-auto main-nav align-items-center'>
 
         <li class='nav-item dropdown dropdown-slide'>
-          <%= link_to 'マイページ', root_path, class: 'nav-link', data: { toggle: 'dropdown' }, aria: { haspopup: 'true', expanded: 'false' }, id: 'header-profile' do %>
+          <%= link_to root_path, class: 'nav-link', data: { toggle: 'dropdown' }, aria: { haspopup: 'true', expanded: 'false' }, id: 'header-profile' do %>
+            マイページ
             <%= image_tag('bread_sample.jpg', class: 'img-fluid rounded-circle mr15', alt: 'Bread Sample', width: '40', height: '40') %>
           <% end %>
         </li>
