画像を円にする

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -14,7 +14,7 @@
         <li class='nav-item dropdown dropdown-slide'>
           <%= link_to root_path, class: 'nav-link', data: { toggle: 'dropdown' }, aria: { haspopup: 'true', expanded: 'false' }, id: 'header-profile' do %>
             マイページ
-            <%= image_tag('bread_sample.jpg', class: 'img-fluid rounded-circle mr15', alt: 'Bread Sample', width: '40', height: '40') %>
+            <%= image_tag('bread_sample.jpg', class: 'img-fluid rounded-circle mr-2', alt: 'Bread Sample', width: '40', height: '40', style: 'object-fit: cover; object-position: center;') %>
           <% end %>
         </li>
       </ul>
