fontawesomeをインストール

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,9 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbolinks-track": "reload" %>
+
+    <!-- FontAwesomeのCDNを追加 -->
+    <script src="https://kit.fontawesome.com/b4dbab9e36.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
