--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -21,7 +21,7 @@
       </li>
       <li class="nav-item mx-2">
         <%= link_to root_path, class: "nav-link text-center" do %>
-          <i class="fa-regular fa-map-location-dot"></i>
+          <i class="fa-sharp fa-regular fa-map-location-dot"></i>
           <span class="d-block text-center">マップ</span>
         <% end %>
       </li>
