fontawesome　フォントプロから変更

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,25 +3,25 @@
     <ul class="navbar-nav flex-row justify-content-center align-items-center">
       <li class="nav-item mx-2">
         <%= link_to root_path, class: "nav-link text-center" do %>
-          <i class="fa-sharp fa-regular fa-house"></i>
+          <i class="fa-solid fa-house"></i>
           <span class="d-block text-center">ホーム</span>
         <% end %>
       </li>
       <li class="nav-item mx-2">
         <%= link_to root_path, class: "nav-link text-center" do %>
-          <i class="fa-sharp fa-solid fa-magnifying-glass"></i>
+          <i class="fa-solid fa-magnifying-glass"></i>
           <span class="d-block text-center">サーチ</span>
         <% end %>
       </li>
       <li class="nav-item mx-2">
         <%= link_to root_path, class: "nav-link text-center" do %>
-          <i class="fa-sharp fa-regular fa-pen-to-square"></i>
+          <i class="fa-regular fa-pen-to-square"></i>
           <span class="d-block text-center">ポスト</span>
         <% end %>
       </li>
       <li class="nav-item mx-2">
         <%= link_to root_path, class: "nav-link text-center" do %>
-          <i class="fa-sharp fa-regular fa-map-location-dot"></i>
+          <i class="fa-regular fa-map"></i>
           <span class="d-block text-center">マップ</span>
         <% end %>
       </li>
