--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -15,13 +15,13 @@
       </li>
       <li class="nav-item mx-2">
         <%= link_to root_path, class: "nav-link text-center" do %>
-          <i class="fa-regular fa-pen-to-square"></i>
+          <i class="fa-solid fa-pen-to-square"></i>
           <span class="d-block text-center">ポスト</span>
         <% end %>
       </li>
       <li class="nav-item mx-2">
         <%= link_to root_path, class: "nav-link text-center" do %>
-          <i class="fa-regular fa-map"></i>
+          <i class="fa-solid fa-map"></i>
           <span class="d-block text-center">マップ</span>
         <% end %>
       </li>
