gemインストール

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <%= javascript_include_tag "application", "data-turbolinks-track": "reload" %>
 
     <!-- FontAwesomeのCDNを追加 -->
-    <script src="https://kit.fontawesome.com/b4dbab9e36.js" crossorigin="anonymous"></script>
+    <!--<script src="https://kit.fontawesome.com/b4dbab9e36.js" crossorigin="anonymous"></script>-->
   </head>
 
   <body>
