--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -21,8 +21,9 @@
       </li>
       <li class="nav-item mx-2">
         <%= link_to root_path, class: "nav-link text-center" do %>
-          <i class="fa-solid fa-map"></i>
-          <span class="d-block text-center">マップ</span>
+          <i class="fas fa-map-marked-alt"></i>
+          <!--<i class="fa-solid fa-map"></i>-->
+          <!--<span class="d-block text-center">マップ</span>-->
         <% end %>
       </li>
     </ul>
