--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,7 +1,7 @@
 <header>
   <nav class='navbar navbar-expand-lg navigation navbar-warning bg-warning'>
     <%= link_to root_path, class: 'navbar-brand' do %>
-      <%= image_tag('bread_sample.jpg', class: 'img-fluid', alt: 'Bread Sample') %>
+      <%= image_tag('bread_sample.jpg', class: 'img-fluid', alt: 'Bread Sample', width: '100', height: 'auto') %>
     <% end %>
     <button class='navbar-toggler' data-bs-toggle='collapse' data-bs-target='#navbarSupportedContent'
       aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation'>
@@ -12,9 +12,10 @@
       <ul class='navbar-nav ms-auto main-nav align-items-center'>
 
         <li class='nav-item dropdown dropdown-slide'>
-          <%= link_to root_path, class: 'nav-link', data: { toggle: 'dropdown' }, aria: { haspopup: 'true', expanded: 'false' }, id: 'header-profile' do %>
+          <%= link_to root_path, class: 'nav-link text-light', data: { toggle: 'dropdown' }, aria: { haspopup: 'true', expanded: 'false' }, id: 'header-profile' do %>
             マイページ
-            <%= image_tag('bread_sample.jpg', class: 'img-fluid rounded-circle mr-2', alt: 'Bread Sample', width: '40', height: '40', style: 'object-fit: cover; object-position: center;') %>
+            <!--<%= image_tag('bread_sample.jpg', class: 'img-fluid rounded-circle mr-2', alt: 'Bread Sample', width: '40', height: '40', style: 'object-fit: cover; object-position: center; border-raduis: 50%;') %>-->
+            <%= image_tag('bread_sample.jpg', class: 'img-fluid rounded-circle', alt: 'Bread Sample', style: 'object-fit: cover; object-position: center;', width: '40', height: '40') %>
           <% end %>
         </li>
       </ul>
