ログイン機能とヘッダー調整

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -12,7 +12,7 @@
       <ul class='navbar-nav ms-auto main-nav align-items-center'>
 
         <li class='nav-item dropdown dropdown-slide'>
-          <%= link_to root_path, class: 'nav-link text-light', data: { toggle: 'dropdown' }, aria: { haspopup: 'true', expanded: 'false' }, id: 'header-profile' do %>
+          <%= link_to login_path, class: 'nav-link text-light', data: { toggle: 'dropdown' }, aria: { haspopup: 'true', expanded: 'false' }, id: 'header-profile' do %>
             マイページ
             <!--<%= image_tag('bread_sample.jpg', class: 'img-fluid rounded-circle mr-2', alt: 'Bread Sample', width: '40', height: '40', style: 'object-fit: cover; object-position: center; border-raduis: 50%;') %>-->
             <%= image_tag('bread_sample.jpg', class: 'img-fluid rounded-circle', alt: 'Bread Sample', style: 'object-fit: cover; object-position: center;', width: '40', height: '40') %>
@@ -22,4 +22,4 @@
     </div>
   </nav>
 </header>
-#仮でリンクをroot_pathに
+#仮でリンクをlogin_pathに。後からマイページに変更
