--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-expand-lg bg-warning ">
     <div class="container-fluid">
       <%= link_to root_path, class: 'navbar-brand' do %>
-        <%= image_tag('bread_sample.jpg', class: 'img-fluid', alt: 'Bread Sample') %>
+        <%= image_tag('bread_sample.jpg', class: 'img-fluid', alt: 'Bread Sample', width: '100', height: 'auto') %>
       <% end %>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -10,7 +10,7 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <%= link_to root_path, class: 'nav-link' do %>
+            <%= link_to login_path, class: 'nav-link' do %>
               <i class="fa-solid fa-right-to-bracket fa-xl custom-icon flex-shrink-0 group-hover:text-mitsuboshi-blue"></i>
               <span class="icon-texte">ログイン</span>
             <% end %>
