--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -9,10 +9,10 @@
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item">
-            <%= link_to login_path, class: 'nav-link' do %>
-              <i class="fa-solid fa-right-to-bracket fa-xl custom-icon flex-shrink-0 group-hover:text-mitsuboshi-blue"></i>
-              <span class="icon-texte">ログイン</span>
+          <li class="nav-item mx-2">
+            <%= link_to login_path, class: "nav-link text-center" do %>
+              <i class="bi bi-box-arrow-in-right h1 text-light"></i>
+              <span class="d-block text-center text-light ms-2">ログイン</span>
             <% end %>
           </li>
         </ul>
