--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -10,7 +10,11 @@
 
     <div class='collapse navbar-collapse' id='navbarSupportedContent'>
       <ul class='navbar-nav ms-auto main-nav align-items-center'>
-
+        <li class='nav-item'>
+          <%= form_with url: logout_path, method: :delete, class: 'd-inline', data: { turbo: false } do %>
+            <button type="submit" class='nav-link btn btn-link text-light' style="padding: 0; border: none;">ログアウト</button>
+          <% end %>
+        </li>
         <li class='nav-item dropdown dropdown-slide'>
           <%= link_to login_path, class: 'nav-link text-light', data: { toggle: 'dropdown' }, aria: { haspopup: 'true', expanded: 'false' }, id: 'header-profile' do %>
             マイページ
