新規投稿機能・画面作成　表示画面はまだ

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -15,7 +15,7 @@
         <% end %>
       </li>
       <li class="nav-item mx-2">
-        <%= link_to root_path, class: "nav-link text-center" do %>
+        <%= link_to new_post_path, class: "nav-link text-center" do %>
           <i class="bi bi-pencil-square h2 text-light"></i>
           <span class="d-block text-center text-light">ポスト</span>
         <% end %>
