--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -17,7 +17,7 @@
         </li>
         <li class='nav-item dropdown dropdown-slide'>
           <%= link_to login_path, class: 'nav-link text-light', data: { toggle: 'dropdown' }, aria: { haspopup: 'true', expanded: 'false' }, id: 'header-profile' do %>
-            マイページ
+            マイページ（あとでリンク修正）
             <!--<%= image_tag('bread_sample.jpg', class: 'img-fluid rounded-circle mr-2', alt: 'Bread Sample', width: '40', height: '40', style: 'object-fit: cover; object-position: center; border-raduis: 50%;') %>-->
             <%= image_tag('bread_sample.jpg', class: 'img-fluid rounded-circle', alt: 'Bread Sample', style: 'object-fit: cover; object-position: center;', width: '40', height: '40') %>
           <% end %>
@@ -26,4 +26,3 @@
     </div>
   </nav>
 </header>
-#仮でリンクをlogin_pathに。後からマイページに変更
