ポスト作成機能

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -3,14 +3,14 @@
     <div class="col-lg-8 offset-lg-2">
       <h3>ファイルを選択</h3>
       <h3>位置情報追加</h3>
-      <%= form_with model: @post, class: "new_post" do |f| %>
+      <%= form_with model: @post, data: { turbo: false }, class: "new_post" do |f| %>
         <div class="mb-3">
-          <%= f.label :title, '店舗名' %>
-          <%= f.text_field :title, class: "form-control" %>
+          <%= f.label :store_name, '店舗名' %>
+          <%= f.text_field :store_name, class: "form-control" %>
         </div>
         <div class="mb-3">
-          <%= f.label :body, 'テキスト' %>
-          <%= f.text_area :body, class: "form-control", rows: "10" %>
+          <%= f.label :content, 'テキスト' %>
+          <%= f.text_area :content, class: "form-control", rows: "10" %>
         </div>
         <%= f.submit nil, class: "btn btn-primary" %>
       <% end %>
