--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -3,7 +3,7 @@
     <div class="col-md-8 col-lg-6">
       <h1 class="fw-bold ps-3">新規作成（仮）</h1>
       <div class="p-3 pt-4">
-        <%= render 'form', form: @form %>
+        <%= render 'form', post: @post %>
       </div>
     </div>
   </div>
