--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,6 @@
 <nav id="bottom-navbar" class="navbar navbar-expand-lg navbar-warning bg-warning fixed-bottom">
   <div class="container-fluid px-2 py-1">
-    <!--<ul class="navbar-nav flex-row justify-content-center align-items-center">-->
-    <ul class="navbar-nav d-flex justify-content-center align-items-center w-100">
+    <ul class="navbar-nav d-flex flex-nowrap justify-content-center align-items-center w-100">
       <li class="nav-item mx-2">
         <%= link_to root_path, class: "nav-link text-center" do %>
           <i class="bi bi-house-door h2 text-light"></i>
@@ -9,7 +8,7 @@
         <% end %>
       </li>
       <li class="nav-item mx-2">
-        <%= link_to root_path, class: "nav-link text-center" do %>
+        <%= link_to posts_path, class: "nav-link text-center" do %>
           <i class="bi bi-search h2 text-light"></i>
           <span class="d-block text-center text-light">サーチ</span>
         <% end %>
