--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -31,6 +31,17 @@
             <%= t('.password_confirmation_error') %>
           </div>-->
         </div>
+        <div class="mb-3">
+          <%= f.label :avatar, 'プロフィール画像'%>
+          <%= f.file_field :avatar, class: 'form-control mb-3', accept: 'image/*' %>
+          <%= f.hidden_field :avatar_cache %>
+          <div class='mt-3 mb-3'>
+            <%= image_tag @user.avatar.url,
+                          class: 'rounded-circle',
+                          id: 'preview',
+                          size: '100x100' %>
+          </div>
+        </div>
         <div class="text-center">
           <%= f.submit '登録', class: 'btn btn-primary' %>
         </div>
