--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,6 +1,6 @@
 <nav id="bottom-navbar" class="navbar navbar-expand-lg navbar-warning bg-warning fixed-bottom">
   <div class="container-fluid px-2 py-1">
-    <ul class="navbar-nav d-flex flex-nowrap justify-content-center align-items-center w-100">
+    <ul class="navbar-nav d-flex flex-nowrap justify-content-center align-items-center w-100 list-group list-group-horizontal">
       <li class="nav-item mx-2">
         <%= link_to root_path, class: "nav-link text-center" do %>
           <i class="bi bi-house-door h2 text-light"></i>
