--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,10 +1,20 @@
-<div class="col-lg-6 mb-4">
+<div class="fixed-width" style="width: 800px; margin: 0 auto;">
   <div class="card h-100">
     <div class="card-body">
       <h4 class="card-title">
         <%= link_to post.store_name, post_path(post) %>
       </h4>
-      <h5>画像表示位置</h5>
+      <% if post.images.any? %>
+        <div class="d-flex justify-content-center">
+          <div class="image-preview d-flex flex-wrap justify-content-center">
+            <% post.images.each do |image| %>
+              <div class="col-6 p-2 d-flex justify-content-center">
+                <%= image_tag image.to_s, class: "img-thumbnail" %>
+              </div>
+            <% end %>
+          </div>
+        </div>
+      <% end %>
     </div>
   </div>
 </div>
