--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container pt-5">
   <div class="row mb-3">
-    <div class="col-lg-8 offset-lg-2">
+    <div class="fixed-width" style="width: 800px; margin: 0 auto;">
       <article class="card p-3">
         <div class='d-flex justify-content-end me-3'>
           <%= link_to root_path, id: "button-edit-#{@post.id}" do %>#editパスへ変更
@@ -21,13 +21,25 @@
         <div class="card-body">
           <div class="row">
             <p>タグ表示位置</p>
-            <p>画像表示位置</p>
+          </div>
+          <div calss="text-center">
+            <% if @post.images.any? %>
+              <div class="d-flex justify-content-center flex-wrap">
+                <% @post.images.each do |image| %>
+                  <div class="col-6 p-2 d-flex justify-content-center">
+                    <%= image_tag image.to_s, class: "img-thumbnail" %>
+                  </div>
+                <% end %>
+              </div>
+            <% end %>
+          </div>
+          <div class="row">
             <p><%= simple_format(@post.content) %></p>
             <p>コメント表示位置</p>
             <p>マップ表示位置</p>
           </div>
-        </article>
-      </div>
+        </div>
+      </article>
     </div>
   </div>
 </div>
