削除機能追加・_postとnewのform表示位置を調整

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container my-5">
-  <div class="rou justify-content-center">
-    <div class="col-md-8 col-lg-6">
+  <div class="row">
+    <div class="col-md-8 offset-lg-2">
       <h1 class="fw-bold ps-3">新規作成（仮）</h1>
       <div class="p-3 pt-4">
         <%= render 'form', post: @post %>
