--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
     <!-- FontAwesomeのCDNを追加 -->
     <!--<script src="https://kit.fontawesome.com/b4dbab9e36.js" crossorigin="anonymous"></script>-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">-->
 
     <style>
       body {
