--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,12 @@
         padding-bottom: 70px;
       }
     </style>
+
+    <script>
+      const GOOGLE_MAPS_API_KEY = "<%= ENV['GOOGLE_MAPS_API_KEY'] %>";
+      const GEOCODING_API_KEY = "<%= ENV['GEOCODING_API_KEY'] %>";
+      const PLACES_API_KEY = "<%= ENV['PLACES_API_KEY'] %>";
+    </script>
   </head>
 
   <body>
