--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,8 +1,12 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-8 offset-lg-2">
-      <h3>位置情報追加</h3>
       <%= form_with model: @post, data: { turbo: false }, class: "new_post" do |f| %>
+        <div class="mb-3">
+          <i class="bi bi-pin-map-fill"></i>
+          <%= f.label :address, '位置情報' %>
+          <%= f.text_field :address, id: 'address-input' %>
+        </div>
         <div class="mb-3">
           <%= f.label :images, '画像' %>
           <%= f.file_field :images, multiple: true, class: "form-control", id: 'picture-input'%>
@@ -21,4 +25,18 @@
     </div>
   </div>
 </div>
-#画像アップロード・位置情報随時追加
+
+<!-- places APIを読み込む -->
+<script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['PLACES_API_KEY'] %>&libraries=places"></script>
+
+<script>
+  document.addEventListener('DOMContentLoaded', function() {
+    var addressInput = document.getElementById('address-input');
+    var autocomplete = new google.maps.places.Autocomplete(addressInput);
+
+    google.maps.event.addListener(autocomplete, 'place_changed', function() {
+      var place = autocomplete.getPlace();
+      addressInput.value = place.formatted_address;
+    });
+  });
+</script>
