--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -4,14 +4,24 @@
       <%= form_with model: @post, data: { turbo: false }, class: "new_post" do |f| %>
         <div class="mb-3">
           <i class="bi bi-pin-map-fill"></i>
-          <%= f.label :address, '位置情報' %>
+          <%= f.label :address, '位置情報', for: 'address-input' %>
           <%= f.text_field :address, id: 'address-input' %>
         </div>
         <div class="mb-3">
-          <%= f.label :images, '画像' %>
-          <%= f.file_field :images, multiple: true, class: "form-control", id: 'picture-input'%>
+          <%= f.label :images, '画像', for: 'picture-input' %>
+          <%= f.file_field :images, multiple: true, class: "form-control", id: 'picture-input' %>
+          <div id="image-preview" class="image-preview mt-3">
+            <% if @post.images.present? && @post.images.any? %>
+              <div class="d-flex flex-wrap">
+                <% @post.images.each do |image| %>
+                  <div class="col-6 p-2">
+                    <%= image_tag image.url, class: "img-thumbnail", style: "width: 100%; height: auto; object-fit: cover;" %>
+                  </div>
+                <% end %>
+              </div>
+            <% end %>
+          </div>
         </div>
-        <div id="image-preview" class="image-preview"></div>
         <div class="mb-3">
           <%= f.label :store_name, '店舗名' %>
           <%= f.text_field :store_name, class: "form-control" %>
@@ -26,8 +36,8 @@
   </div>
 </div>
 
-<!-- places APIを読み込む -->
-<script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['PLACES_API_KEY'] %>&libraries=places"></script>
+<!-- places APIを読み込む 
+<script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['PLACES_API_KEY'] %>&libraries=places" ></script>-->
 
 <script>
   document.addEventListener('DOMContentLoaded', function() {
