--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -62,7 +62,7 @@
               }
             </script>
 
-            <script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV["GOOGLE_MAPS_API_KEY"] %>&callback=initMap"></script>
+            <!--<script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV["GOOGLE_MAPS_API_KEY"] %>&callback=initMap"></script>-->
 
         </div>
       </article>
