--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -60,6 +60,10 @@
                     title: '<%= j @post.store_name %>'
                   });
               }
+
+              document.addEventListener('turbo:load', function() {
+                initMap();
+              });
             </script>
 
             <!--<script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV["GOOGLE_MAPS_API_KEY"] %>&callback=initMap"></script>-->
