--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,7 @@
 <div class="container my-5">
   <div class="row">
     <div class="col-lg-8 offset-lg-2">
+      <h3>画像は再選択してください</h3>
       <%= render 'form', post: @post %>
     </div>
   </div>
