--- a/app/views/static_pages/privacy_policy.html.erb
+++ b/app/views/static_pages/privacy_policy.html.erb
@@ -1,2 +1,68 @@
-キヤク
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>プライバシーポリシー</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    .text-small {
+      font-size: 0.875rem; /* Bootstrap で fs-5 相当のサイズ */
+    }
+    .text-small p {
+      margin-bottom: 0.2rem; /* 段落間の間隔を狭める */
+    }
+  </style>
+</head>
 
+<body>
+<div class="container mt-5 mb-5 text-small">
+  <div class="text-center mb-3">
+    <h6 class="display-6 font-weight-bold mb-4">プライバシーポリシー</h6>
+  </div>
+  <div class="text-center">
+    <p>ちょきパン（以下、「当方」といいます。）は、本ウェブサイト上で提供するサービスにおける、</p>
+    <p>ユーザーの個人情報の取扱いについて、以下のとおりプライバシーポリシーを定めます。</p>
+  </div>
+  <div class="container mt-5 mb-5 text-small">
+  <div class="text-start">
+    <h4>お客様から取得する情報</h4>
+    <p>当社は、お客様から以下の情報を取得します。</p>
+    <ul>
+      <li>氏名(ニックネームやペンネームも含む)</li>
+      <li>メールアドレス</li>
+      <li>写真や動画</li>
+    </ul>
+    
+    <h4>お客様の情報を利用する目的</h4>
+    <p>当社は、お客様から取得した情報を、以下の目的のために利用します。</p>
+    <ul>
+      <li>当社サービスに関する登録の受付、お客様の本人確認、認証のため</li>
+      <li>お客様の当社サービスの利用履歴を管理するため</li>
+      <li>以上の他、当社サービスの提供、維持、保護及び改善のため</li>
+    </ul>
+    
+    <h4>安全管理のために講じた措置</h4>
+    <p>当社が、お客様から取得した情報に関して安全管理のために講じた措置につきましては、末尾記載のお問い合わせ先にご連絡をいただきましたら、法令の定めに従い個別にご回答させていただきます。</p>
+    
+    <h4>第三者提供</h4>
+    <p>当社は、お客様から取得する情報のうち、個人データ（個人情報保護法第１６条第３項）に該当するものついては、あらかじめお客様の同意を得ずに、第三者（日本国外にある者を含みます。）に提供しません。</p>
+    <p>但し、次の場合は除きます。</p>
+    <ul>
+      <li>個人データの取扱いを外部に委託する場合</li>
+      <li>当社や当社サービスが買収された場合</li>
+      <li>事業パートナーと共同利用する場合（具体的な共同利用がある場合は、その内容を別途公表します。）</li>
+      <li>その他、法律によって合法的に第三者提供が許されている場合</li>
+    </ul>
+    
+    <h4>プライバシーポリシーの変更</h4>
+    <p>当社は、必要に応じて、このプライバシーポリシーの内容を変更します。この場合、変更後のプライバシーポリシーの施行時期と内容を適切な方法により周知または通知します。</p>
+    
+    <h4>お問い合わせ</h4>
+    <p>お客様の情報の開示、情報の訂正、利用停止、削除をご希望の場合は、お問い合わせフォームからご連絡ください。</p>
+  </div>
+</div>
+</div>
+</body>
+</html>
