--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
+    <%= favicon_link_tag asset_path('favicon2.PNG') %>
 
     <!-- FontAwesomeのCDNを追加 -->
     <!--<script src="https://kit.fontawesome.com/b4dbab9e36.js" crossorigin="anonymous"></script>-->
@@ -15,7 +16,16 @@
 
     <style>
       body {
-        padding-bottom: 70px;
+        background-color: #fff8dc;
+        padding-bottom: 120px;
+      }
+
+      #bottom-navbar {
+        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+      }
+
+      .custom-navbar {
+        background-color: #6b8e23;
       }
     </style>
 
@@ -44,6 +54,10 @@
     </script>
 
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['PLACES_API_KEY'] %>&libraries=places&callback=initMap"></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Darumadrop+One&family=Zen+Kurenaido&display=swap" rel="stylesheet">
   </head>
 
   <body>
