--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -1,12 +1,21 @@
+<style>
+  .navbar-brand.darumadrop-one-regular {
+    font-family: "Darumadrop One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 2rem;
+    margin-left: 30px;
+  }
+</style>
 <header>
-  <nav class="navbar navbar-expand-lg bg-warning ">
-    <div class="container-fluid">
-      <%= link_to root_path, class: 'navbar-brand' do %>
-        <%= image_tag('bread_sample.jpg', class: 'img-fluid', alt: 'Bread Sample', width: '100', height: 'auto') %>
-      <% end %>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+  <nav class='navbar navbar-expand-lg navigation custom-navbar' style="box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);">
+    <%= link_to root_path, class: 'navbar-brand darumadrop-one-regular' do %>
+      ちょきパン
+    <% end %>
+    <button class='navbar-toggler' data-bs-toggle='collapse' data-bs-target='#navbarSupportedContent'
+      aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation'>
+      <span class='navbar-toggler-icon'></span>
+    </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item mx-2">
