--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<nav id="bottom-navbar" class="navbar navbar-expand-lg navbar-warning bg-warning fixed-bottom">
+<nav id="bottom-navbar" class="navbar navbar-expand-lg custom-navbar fixed-bottom" style="box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);">
   <div class="container-fluid px-2 py-1">
     <ul class="navbar-nav d-flex flex-nowrap justify-content-center align-items-center w-100 list-group list-group-horizontal">
       <li class="nav-item mx-2">
