--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -20,7 +20,7 @@
         <% end %>
       </li>
       <li class="nav-item mx-2">
-        <%= link_to root_path, class: "nav-link text-center" do %>
+        <%= link_to favorites_posts_path, class: "nav-link text-center" do %>
           <i class="bi bi-map h2 text-light"></i>
           <span class="d-block text-center text-light">マップ</span>
         <% end %>
