--- a/app/views/posts/_unfavorite.html.erb
+++ b/app/views/posts/_unfavorite.html.erb
@@ -1,3 +1,3 @@
 <%= link_to favorite_path(current_user.favorites.find_by(post_id: post.id)), id: "unfavorite-button-for-post-#{post.id}", data: { turbo_method: :delete } do %>
-  <i class="bi bi-map-fill"></i>
+  <i class="bi bi-map-fill h4"></i>
 <% end %>
