アイコンやボタンの色

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,40 @@
       }
 
       .custom-navbar {
-        background-color: #6b8e23;
+        background-color: #d2b48c;
+      }
+
+      .btn-custom {
+        background-color: #4682b4; /* 背景色 */
+        color: #fff; /* 文字色 */
+        border: none; /* ボーダーを削除 */
+        border-radius: 0.25rem; /* 角丸のサイズ */
+        padding: 0.5rem 1rem; /* 内側の余白 */
+        font-size: 1rem; /* フォントサイズ */
+        font-weight: 400; /* フォントの太さ */
+        text-align: center; /* 文字の配置 */
+        text-decoration: none; /* 下線を削除 */
+        display: inline-block; /* インラインブロック表示 */
+        cursor: pointer; /* カーソルをポインタにする */
+        transition: background-color 0.15s ease-in-out, color 0.15s ease-in-out;
+      }
+
+      .btn-custom:hover {
+        background-color: rgba(70, 130, 180, 0.8); /* ホバー時の背景色（rgbaで透明度を設定） */
+        color: #fff; /* ホバー時の文字色 */
+      }
+
+      .link-grey {
+        color: #808080; /* グレーの色 */
+        text-decoration: none; /* 下線を削除 */
+      }
+      .link-grey:hover {
+        color: #696969; /* ホバー時のグレー色（少し暗い色） */
+        text-decoration: underline; /* ホバー時に下線を表示 */
+      }
+
+      .link-blue {
+        color: #4682b4;
       }
     </style>
 
