--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -69,13 +69,13 @@
 <footer class="bg-base-color px-2 mb-20">
   <div class="d-flex justify-content-center align-items-center">
     <div class="px-2"> 
-      <%= link_to '利用規約', terms_of_use_path %>
+      <%= link_to '利用規約', terms_of_use_path, class: 'link-grey' %>
     </div>
     <div class="px-2"> 
-      <%= link_to 'プライバシーポリシー', privacy_policy_path %>
+      <%= link_to 'プライバシーポリシー', privacy_policy_path, class: 'link-grey' %>
     </div>
     <div class="px-2"> 
-      <%= link_to 'お問い合わせ', 'https://forms.gle/J1eiMBtJLH4VGG94A' %>
+      <%= link_to 'お問い合わせ', 'https://forms.gle/J1eiMBtJLH4VGG94A', class: 'link-grey' %>
     </div>
   </div>
   <hr class="my-2 border-b-1 border-bg-mitsuboshi-gray" />
