--- a/app/views/posts/_favorite.html.erb
+++ b/app/views/posts/_favorite.html.erb
@@ -1,3 +1,3 @@
-<%= link_to favorites_path(post_id: post.id), id: "favorite-button-for-post-#{post.id}", data: { turbo_method: :post } do %>
+<%= link_to favorites_path(post_id: post.id), id: "favorite-button-for-post-#{post.id}", class: "link-blue", data: { turbo_method: :post } do %>
   <i class="bi bi-map h4"></i>
 <% end %>
