--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -3,7 +3,7 @@
     <div class="col-lg-8 offset-lg-2">
       <%= form_with model: @post, data: { turbo: false }, class: "new_post" do |f| %>
         <div class="mb-3">
-          <i class="bi bi-pin-map-fill"></i>
+          <i class="bi bi-geo-alt-fill"></i>
           <%= f.label :address, '位置情報', for: 'address-input' %>
           <%= f.text_field :address, id: 'address-input', value: @post.location_information&.address %>
         </div>
@@ -61,7 +61,7 @@
         </div>
         
         <%= f.hidden_field :tags, id: 'selected-tags' %>
-        <%= f.submit '投稿', class: "btn btn-primary" %>
+        <%= f.submit '投稿', class: "btn btn-custom" %>
       <% end %>
     </div>
   </div>
