--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -3,7 +3,7 @@
     <div class="card-body">
       <div class="d-flex justify-content-between align-items-center mb-3">
         <h4 class="card-title">
-          <%= link_to post.store_name, post_path(post) %>
+          <%= link_to post.store_name, post_path(post), class: "link-blue" %>
         </h4>
         <% if post.user != current_user %>
           <%= render 'favorite_buttons', post: post %>
