--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,8 @@
 <div class="container pt-3">
   <div class="row justify-content-center">
+    <div class="col-lg-10 offset-lg-1">
+      <%= render 'search_form', q: @q, url: posts_path %>
+    </div>
     <div class="col-md-10">
       <div class="row">
         <% if @posts.present? %>
