--- a/app/views/posts/_search_form.html.erb
+++ b/app/views/posts/_search_form.html.erb
@@ -2,7 +2,7 @@
   <div class="input-group mb-3">
     <%= f.search_field :store_name_or_content_cont, class: 'form-control', placeholder: '店舗名/本文部分一致' %>
     <div class="input-group-append">
-      <%= f.submit'検索', class: 'btn btn-primary' %>
+      <%= f.submit'検索', class: 'btn btn-custom' %>
     </div>
   </div>
 <% end %>
