--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,20 +1,85 @@
 <div class="container pt-3">
   <div class="row justify-content-center">
-    <div class="col-lg-10 offset-lg-1">
+    <div class="col-lg-7 offset-lg--1">
       <%= render 'search_form', q: @q, url: posts_path %>
     </div>
-    <div class="col-md-10">
-      <div class="row">
-        <% if @posts.present? %>
-          <% @posts.each do |post| %>
-            <div class="col-12 mb-3 d-flex justify-content-center">
-              <%= render post %>
-            </div>
-          <% end %>
-        <% else %>
-          <div class="col-12 mb-3">ポストがありません</div>
-        <% end %>
+    <div class="col-lg-10 offset-lg-3 d-flex justify-content-start mb-3">
+      <!-- ボタンを検索窓と揃えて右に配置 -->
+      <button id="list-view" class="btn btn-custom me-2 d-none" onclick="toggleView('list')">リストビュー</button>
+      <button id="map-view" class="btn btn-custom" onclick="toggleView('map')">マップビュー</button>
+    </div>
+    <div id="list-view-container" class="col-12">
+      <div class="row justify-content-center">
+        <div class="col-md-10">
+          <div class="row">
+            <% if @posts.present? %>
+              <% @posts.each do |post| %>
+                <div class="col-12 mb-3 d-flex justify-content-center">
+                  <%= render post %>
+                </div>
+              <% end %>
+            <% else %>
+              <div class="col-12 mb-3">ポストがありません</div>
+            <% end %>
+          </div>
+        </div>
       </div>
     </div>
+    <div id="map-view-container" class="d-none">
+        <div id="map" style="height: 500px;"></div>
+      </div>
   </div>
 </div>
+<script>
+function toggleView(view) {
+    if (view === 'list') {
+      document.getElementById('list-view-container').classList.remove('d-none');
+      document.getElementById('map-view-container').classList.add('d-none');
+      document.getElementById('list-view').classList.add('d-none');
+      document.getElementById('map-view').classList.remove('d-none');
+    } else {
+      document.getElementById('list-view-container').classList.add('d-none');
+      document.getElementById('map-view-container').classList.remove('d-none');
+      document.getElementById('map-view').classList.add('d-none');
+      document.getElementById('list-view').classList.remove('d-none');
+    }
+  }
+document.addEventListener("turbo:load", function() {
+  var listViewButton = document.getElementById("list-view");
+  var mapViewButton = document.getElementById("map-view");
+  var listViewContainer = document.getElementById("list-view-container");
+  var mapViewContainer = document.getElementById("map-view-container");
+
+  listViewButton.addEventListener("click", function() {
+    listViewContainer.classList.remove("d-none");
+    mapViewContainer.classList.add("d-none");
+  });
+
+  mapViewButton.addEventListener("click", function() {
+    listViewContainer.classList.add("d-none");
+    mapViewContainer.classList.remove("d-none");
+
+    // マップの初期化を行う
+    initMap();
+  });
+});
+
+function initMap() {
+  const map = new google.maps.Map(document.getElementById("map"), {
+    center: { lat: 35.6895, lng: 139.6917 }, // 初期位置は東京に設定
+    zoom: 12
+  });
+
+  // 検索結果のポストに基づいてマーカーを配置
+  <% @posts.each do |post| %>
+    <% if post.location_information.present? %> 
+      new google.maps.Marker({
+        position: { lat: <%= post.location_information.latitude %>, lng: <%= post.location_information.longitude %> },
+        map: map,
+        title: "<%= j(post.store_name) %>"
+      });
+    <% end %>
+  <% end %>
+}
+
+</script>
